Added new css design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<ul id="menu">
 		<li><a  class="active"  href="index.html">Home</a></li>
 		<li><a href="index.html" >Galery</a></li>
-		<li id= "heading_button" class="buttons">Click here to Subscribe</li>
+		<!--<li id= "heading_button" class="buttons">Click here to Subscribe</li>-->
 	</ul>
 
 	<div class="header">
@@ -22,7 +22,7 @@
 		<h1 id= "main_heading">Cutie Pups</h1>
 	</div>
   
-	<div class="container">
+	<!--<div class="container">
 		<div class="image-gallery" >
    
 			<img src="pictures/pup.jpg">
@@ -38,13 +38,17 @@
 			<img  src="pictures/doggy.jpg">
    
 		</div>
-	</div>
+	</div>-->
 	
 	<div id="wrapper">
 		<h2>If you would like to see more pictures enter your email here:</h2><br>
 		<input type= "text" id="email" placeholder = " your@email.com"></input><br>
 		<h3 id = "button_subscribe" class="buttons">Subscribe</h3>
 		<div id="output"></div>
+	</div>
+	
+	<div id="buttom-form">
+	
 	</div>
 	
 </body>
