Added additional div below the form and styled it

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 	</ul>
 
 	<div class="header">
+		
+		<h1 id= "main_heading">Cutie Pups
 		<img  src="pictures/pet-paw-hi.png" width="150em" height="150em"/>
-		<h1 id= "main_heading">Cutie Pups</h1>
+		</h1>
 	</div>
   
 	<!--<div class="container">
@@ -48,7 +50,7 @@
 	</div>
 	
 	<div id="buttom-form">
-	
+		<div id = "buttom-center">SOme text</div>
 	</div>
 	
 </body>
