Changed fonts for the main heading, and for the subscribe field

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 
 <body>
-	<ul id="menu">
+	<!--<ul id="menu">
 		<li><a  class="active"  href="index.html">Home</a></li>
 		<li><a href="index.html" >Galery</a></li>
-		<!--<li id= "heading_button" class="buttons">Click here to Subscribe</li>-->
+		<!--<li id= "heading_button" class="buttons">Click here to Subscribe</li>
 	</ul>
-
+-->
 	<div class="header">
 		
 		<h1 id= "main_heading">Cutie Pups
-		<!--<img  src="pictures/pet-paw-hi.png" width="150em" height="150em"/>-->
-		</h1>
-	<!--</div>
-			<div class="image-gallery" >
+		
+		</h1><img  src="pictures/pet-paw-hi.png" />
+	</div>
+	<!--		<div class="image-gallery" >
 			
 			<img src="pictures/pup.jpg">
    
